--- a/package.json
+++ b/package.json
@@ -32,11 +32,15 @@
     "@aspida/fetch": "^1.14.0",
     "@aspida/node-fetch": "^1.14.0",
     "@aspida/swr": "^1.14.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@fastify/cors": "^10.0.2",
     "@fastify/helmet": "^13.0.1",
     "@fastify/jwt": "^9.0.3",
     "@fastify/multipart": "^9.0.3",
     "@fastify/static": "^8.1.0",
+    "@mui/icons-material": "^6.4.6",
+    "@mui/material": "^6.4.6",
     "@prisma/client": "^6.3.1",
     "aspida": "^1.14.0",
     "dotenv": "^16.4.7",
